fix overflowing labels

--- a/src/irb-app/irb-result/bar-chart/index.styl
+++ b/src/irb-app/irb-result/bar-chart/index.styl
@@ -105,6 +105,10 @@
       &.chart-header
         max-width 160px
 
+        .chart-header-text
+          overflow hidden
+          text-overflow ellipsis
+
         li
           overflow hidden
           text-overflow ellipsis
